2003-07-31  Paul Eggert  <eggert@twinsun.com>

	* lib/m4sugar/m4sh.m4 (_AS_UNSET_PREPARE): Work around a bug
	in Bash 2.01.  Problem reported by Brian Gough in
	<http://mail.gnu.org/archive/html/bug-autoconf/2003-07/msg00106.html>.

2003-07-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lib/autoconf/fortran.m4 (AC_F77_LIBRARY_LDFLAGS): Also ignore
	-lcrt1.o, for OS X.  (trivial change)

2003-07-07  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/c.m4 (AC_C_INLINE): Wrap the '#define inline ...'
	inside '#ifndef __cplusplus'.  Problem reported by
	Bob Friesenhahn.

2003-07-06  Bill Clarke  <llib@computer.org>

	* lib/autoconf/functions.m4 (AC_FUNC_MMAP): Cast pointer to
	'long', not 'int', for benefit of Sun's recent C++ compilers
	(trivial change).  See:
	http://mail.gnu.org/archive/html/autoconf-patches/2003-07/msg00007.html
	(This really should be 'intptr_t', not 'long', but that would
	take more work.)
	
2003-06-25  Akim Demaille  <akim@epita.fr>

	* lib/Makefile.am (autom4te.cfg): Make it read only.
	Depend on Makefile since it contains substitutions.
	From Paolo Bonzini.
	* lib/autom4te.in (args): Add local.at? for Autotest args.
	This change was made on autom4te.cfg which is generated.
	Reported by Raja R. Harinath.

2003-06-25  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Header Portability): sys/mount.h.
	From Gareth McCaughan.

2003-06-23  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Report a single config.log,
	not all of them.  This fixes 1. the fact that when testing
	Autoconf there are many many config.log, 2. the incorrect use of
	top_srcdir to find config.log.
	Don't mix the detailed output of failed test with the summary of
	failures.  Rather, append detailed log afterwards.

2003-06-23  Akim Demaille  <akim@epita.fr>

	* tests/local.at (AT_CHECK_CONFIGURE): Adjust to the verbose being
	always run: output config.log on $at_group_log.

2003-06-23  Akim Demaille  <akim@epita.fr>
